# LeelaControl

./: CMakeLists.txt  CMakeSettings.json  README.md  configuration.ini  leela_control.service  startup_project.sh
leela-control/: CMakeLists.txt  DefineView.hpp  LeelaControl.cpp  LeelaControl.hpp  ParseHelp.hpp
leela-control/Protocol/: qsPtl.hpp
leela-control/applications/: AppInstance.cpp  AppInstance.hpp  IManagementUser.hpp  IUser.hpp  ManagementUser.cpp  ManagementUser.hpp  ServiceContext.hpp  UserApp.cpp  UserApp.hpp
leela-control/com/: ComControl.cpp  ComSerial.cpp
leela-control/com/include/: ComControl.hpp  ComSerial.hpp  IComControl.hpp  IComSerial.hpp
leela-control/configurations/: AppConfiguration.cpp  AppConfiguration.hpp  DefineView.hpp
leela-control/configurations/types/: TcpMessageEnvelope.hpp
leela-control/games/: GameLeela.cpp  GameLeela.hpp  IJob.hpp  ILeela.hpp  ILeelaCommand.hpp  IManagementJob.hpp  Job.cpp  Job.hpp  LeelaCPUOnly.cpp  LeelaCPUOnly.hpp  ManagementJob.cpp  ManagementJob.hpp
leela-control/helps/: ParseHelp.cpp  ParseHelp.hpp
leela-control/logger/: CMakeLists.txt  Logger.cpp  Logger.hpp  LoggerConfiguration.hpp  LoggerConfiguration2stdout.cpp  LoggerEnabled.hpp  LoggerFwd.hpp  LoggerImpl.hpp  LoggerPriorityTags.hpp
leela-control/sockets/: DescriptorPoller.hpp  ISocket.hpp  ISocketObserver.hpp  ServiceReceiver.cpp  ServiceReceiver.hpp  ServiceSocket.hpp  SocketMonitorNotifier.cpp  SocketMonitorNotifier.hpp  ZmqReceiver.cpp  ZmqReceiver.hpp
leela-control/sockets/tcp/: ITcpSysCall.hpp  TcpServEndpoint.cpp  TcpServEndpoint.hpp  TcpSysCall.cpp  TcpSysCall.hpp  TcpSysCallFactory.cpp  TcpSysCallFactory.hpp
leela-control/sockets/tcp/types/: IpVersion.hpp  TcpMessageEnvelope.hpp
